--- a/package.json
+++ b/package.json
@@ -15,8 +15,17 @@
   },
   "dependencies": {
     "gatsby": "^2.25.3",
+    "gatsby-image": "^2.5.0",
+    "gatsby-plugin-google-analytics": "^2.5.0",
+    "gatsby-plugin-manifest": "^2.6.0",
+    "gatsby-plugin-react-helmet": "^3.4.0",
+    "gatsby-plugin-sharp": "^2.8.0",
+    "gatsby-source-filesystem": "^2.5.0",
+    "gatsby-transformer-remark": "^2.10.0",
+    "gatsby-transformer-sharp": "^2.6.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
