--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
+    "fontsource-open-sans": "^3.0.9",
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-google-analytics": "^2.5.0",
