--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "fontsource-open-sans": "^3.0.9",
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.5.0",
-    "gatsby-plugin-google-analytics": "^2.5.0",
+    "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-manifest": "^2.6.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.8.0",
