--- a/package.json
+++ b/package.json
@@ -14,25 +14,27 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.12",
-    "fontsource-open-sans": "^3.0.9",
-    "gatsby": "^2.25.3",
-    "gatsby-image": "^2.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.11.4",
+    "fontsource-open-sans": "^4.0.0",
+    "gatsby": "^3.8.1",
+    "gatsby-image": "^3.8.0",
     "gatsby-plugin-gtag": "^1.0.13",
-    "gatsby-plugin-manifest": "^2.6.0",
-    "gatsby-plugin-react-helmet": "^3.4.0",
-    "gatsby-plugin-sharp": "^2.8.0",
-    "gatsby-source-filesystem": "^2.5.0",
-    "gatsby-transformer-remark": "^2.10.0",
-    "gatsby-transformer-sharp": "^2.6.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "gatsby-plugin-manifest": "^3.8.0",
+    "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-plugin-react-helmet": "^4.8.0",
+    "gatsby-plugin-sharp": "^3.8.0",
+    "gatsby-source-filesystem": "^3.8.0",
+    "gatsby-transformer-remark": "^4.5.0",
+    "gatsby-transformer-sharp": "^3.8.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "prettier": "2.3.2"
   },
   "repository": {
     "type": "git",
