--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@material-ui/core": "^4.11.4",
     "fontsource-open-sans": "^4.0.0",
     "gatsby": "^3.8.1",
-    "gatsby-image": "^3.8.0",
     "gatsby-plugin-gtag": "^1.0.13",
+    "gatsby-plugin-image": "^1.8.0",
     "gatsby-plugin-manifest": "^3.8.0",
     "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-react-helmet": "^4.8.0",
